--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <nav>
-        
+        <img src="img/background.jpg" alt="1">
     </nav>
     <div class="content">
-
+        <div class="content-main">
+            
+        </div>
     </div>
     <footer>
 
